Add sections for Pokemon projects
Added multiple sections for Pokemon projects with images and descriptions.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,62 @@
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iste aliquam sed inventore rem in beatae quis aliquid obcaecati ipsum aperiam deserunt veniam quam, id reprehenderit possimus? Quaerat, ratione aut?
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae laboriosam in vel adipisci architecto tempora est dolorum eum obcaecati distinctio corrupti quod, ipsum sit quasi excepturi mollitia nemo. Rerum, adipisci.
 </section>
+
+<section>
+    <div class="card">
+    <div class="page-card">
+        <div class="page-title">
+            Pokemon Project
+        </div>
+        <img src="https://www.muraldecal.com/en/img/pkm012-png/folder/products-detalle-png/stickers-pikachu-happy-chibi-pokemon.png" alt="Pikachu" height="500px">
+    </div>
+    <div class="page-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit ipsum inventore tempora maiores, labore facilis molestiae voluptatum praesentium omnis explicabo veritatis voluptate quod iste itaque repellat ipsa odio minus.</div>
+    </div>
+</section>
+<section>
+    <div class="card">
+    <div class="page-card">
+        <div class="page-title">
+            Pokemon Project
+        </div>
+        <img src="https://www.muraldecal.com/en/img/pkm012-png/folder/products-detalle-png/stickers-pikachu-happy-chibi-pokemon.png" alt="Pikachu" height="500px">
+    </div>
+    <div class="page-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit ipsum inventore tempora maiores, labore facilis molestiae voluptatum praesentium omnis explicabo veritatis voluptate quod iste itaque repellat ipsa odio minus.</div>
+    </div>
+</section>
+<section>
+    <div class="card">
+    <div class="page-card">
+        <div class="page-title">
+            Pokemon Project
+        </div>
+        <img src="https://www.muraldecal.com/en/img/pkm012-png/folder/products-detalle-png/stickers-pikachu-happy-chibi-pokemon.png" alt="Pikachu" height="500px">
+    </div>
+    <div class="page-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit ipsum inventore tempora maiores, labore facilis molestiae voluptatum praesentium omnis explicabo veritatis voluptate quod iste itaque repellat ipsa odio minus.</div>
+    </div>
+</section>
+<section>
+    <div class="card">
+    <div class="page-card">
+        <div class="page-title">
+            Pokemon Project
+        </div>
+        <img src="https://www.muraldecal.com/en/img/pkm012-png/folder/products-detalle-png/stickers-pikachu-happy-chibi-pokemon.png" alt="Pikachu" height="500px">
+    </div>
+    <div class="page-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit ipsum inventore tempora maiores, labore facilis molestiae voluptatum praesentium omnis explicabo veritatis voluptate quod iste itaque repellat ipsa odio minus.</div>
+    </div>
+</section>
+<section>
+    <div class="card">
+    <div class="page-card">
+        <div class="page-title">
+            Pokemon Project
+        </div>
+        <img src="https://www.muraldecal.com/en/img/pkm012-png/folder/products-detalle-png/stickers-pikachu-happy-chibi-pokemon.png" alt="Pikachu" height="500px">
+    </div>
+    <div class="page-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit ipsum inventore tempora maiores, labore facilis molestiae voluptatum praesentium omnis explicabo veritatis voluptate quod iste itaque repellat ipsa odio minus.</div>
+    </div>
+</section>
     <script src="script.js"></script>
 </body>
 </html>
